# costsight

./: .dockerignore  .gitignore  .mailmap  CLAUDE.md  CONTRIBUTING.md  DEMO.md  Dockerfile  LICENSE  PRESENTATION.md  README.md  REPORT.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: benchmark.yml  ci.yml  release.yml
.streamlit/: config.toml
dashboard/: app.py
examples/: README.md  alert_quality.csv  alerts_stl_sample.json  attribution_stl_sample.csv  aws_cur_sample.csv  benchmark_summary.csv  benchmark_summary_service.csv  benchmark_summary_service_env.csv  comparison.csv  cur_calm_60d.csv  cur_default_90d.csv  cur_multi_region_90d.csv  cur_showcase_90d.csv  cur_spike_storm_60d.csv  cur_stealth_leak_90d.csv
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  nav.ts  plotly-shim.d.ts  types.ts
frontend/src/components/: DataTable.tsx  KpiStrip.tsx  Sidebar.tsx  SpendSkyline.tsx  ui.tsx
frontend/src/hooks/: useSnapshot.ts
frontend/src/lib/: api.ts  plot.tsx  threed.ts  tour.ts  utils.ts
frontend/src/state/: params.tsx
frontend/src/views/: AIExplain.tsx  AlertLog.tsx  Budget.tsx  Calendar.tsx  Carbon.tsx  CostTrend.tsx  DetectorComparison.tsx  Drift.tsx  Forecast.tsx  GreenOps.tsx  Incidents.tsx  Lab.tsx  Perf.tsx  Placeholder.tsx  Playbook.tsx  RawData.tsx  Recommendations.tsx  Replay.tsx  RootCause.tsx  Summary.tsx  Tagging.tsx  ThreeD.tsx
legacy/: README.md
legacy/dashboard/: app.py
notebooks/: 01_walkthrough.ipynb
scripts/: make_figures.py  make_sample_curs.py  run_benchmark.py  run_pipeline.py  serve_demo.ps1
slides/: SLIDE_UPDATES.md  deck.html  deck.md
src/cloud_anomaly/: __init__.py  alerts.py  api.py  attribution.py  benchmark.py  carbon.py  cli.py  clustering.py  config.py  cur_loader.py  drift.py  evaluation.py  explainer.py  forecast.py  notification.py  perf.py  pipeline.py  playbook.py  preprocessing.py  pricing.py  recommender.py  synthetic_data.py  tag_governance.py  theoretical_scores.py
src/cloud_anomaly/detectors/: __init__.py  ensemble.py  iforest.py  stl.py  zscore.py
terraform/: README.md  main.tf  variables.tf
terraform/modules/costsight/: main.tf  outputs.tf  variables.tf
tests/: test_pipeline.py
