[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "costsight"
version = "1.0.0"
description = "Automated cloud cost anomaly detection — Z-Score + STL + Isolation Forest + Ensemble, with severity, root-cause attribution, forecasting, and carbon translation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Furkan Can Karafil", email = "fcankaranfil@gmail.com" },
    { name = "Halil Utku Demirtas" },
]
keywords = ["finops", "anomaly-detection", "cloud", "aws", "cur", "cost-management", "sustainability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "scipy>=1.12",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.32",
    "plotly>=5.20",
    "matplotlib>=3.8",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "httpx>=0.27",
]
llm = [
    "anthropic>=0.39",
]
dev = [
    "pytest>=8.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "streamlit>=1.32",
    "plotly>=5.20",
    "matplotlib>=3.8",
    "anthropic>=0.39",
]

[project.urls]
Homepage = "https://github.com/Urthella/costsight"
Repository = "https://github.com/Urthella/costsight"
Issues = "https://github.com/Urthella/costsight/issues"
"Source Code" = "https://github.com/Urthella/costsight"

[project.scripts]
costsight-pipeline = "cloud_anomaly.cli:run_pipeline"
costsight-benchmark = "cloud_anomaly.cli:run_benchmark"
costsight-api = "cloud_anomaly.cli:run_api"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cloud_anomaly" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
